lockdown/parser/grammar/langParser.py
# Generated from lang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class langParser ( Parser ):

    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "','", "'}'", "':'", "'['", "']'", 
                     "'true'", "'false'", "'null'", "'dynamic'", "'function'", 
                     "'('", "')'", "'(|'", "'|)'", "'lockdown'", "'='", 
                     "';'", "'static'", "'typedef'", "'<'", "'>'", "'|>'", 
                     "'is'", "'.'", "'?'", "'*'", "'/'", "'+'", "'-'", "'%'", 
                     "'=='", "'!='", "'<='", "'>='", "'||'", "'&&'", "'*|>'", 
                     "'<<'", "'typeof'", "'continue'", "'break'", "'print'", 
                     "'return'", "'yield'", "'export'", "'json'", "'=>'", 
                     "'Object'", "'Tuple'", "'...'", "'List'", "'Dictionary'", 
                     "'Function'", "'if'", "'else if'", "'else'", "'loop'", 
                     "'while'", "'for'", "'(var'", "'from'", "'in'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STRING", "SYMBOL", "NUMBER", "WS" ]

    RULE_json = 0
    RULE_obj = 1
    RULE_pair = 2
    RULE_arr = 3
    RULE_value = 4
    RULE_function = 5
    RULE_codeBlockAsFunction = 6
    RULE_lockdownJsonExpression = 7
    RULE_argumentDestructurings = 8
    RULE_argumentDestructuring = 9
    RULE_symbolInitialization = 10
    RULE_assignmentOrInitializationLvalue = 11
    RULE_codeBlock = 12
    RULE_destructuring = 13
    RULE_expression = 14
    RULE_breakTypes = 15
    RULE_breakType = 16
    RULE_objectTemplate = 17
    RULE_objectType = 18
    RULE_listTemplate = 19
    RULE_tupleType = 20
    RULE_splat2 = 21
    RULE_listType = 22
    RULE_dictionaryType = 23
    RULE_objectProperties = 24
    RULE_objectProperty = 25
    RULE_functionType = 26
    RULE_ifStatement = 27
    RULE_loop = 28
    RULE_whileLoop = 29
    RULE_forGeneratorLoop = 30
    RULE_forListLoop = 31

    ruleNames =  [ "json", "obj", "pair", "arr", "value", "function", "codeBlockAsFunction", 
                   "lockdownJsonExpression", "argumentDestructurings", "argumentDestructuring", 
                   "symbolInitialization", "assignmentOrInitializationLvalue", 
                   "codeBlock", "destructuring", "expression", "breakTypes", 
                   "breakType", "objectTemplate", "objectType", "listTemplate", 
                   "tupleType", "splat2", "listType", "dictionaryType", 
                   "objectProperties", "objectProperty", "functionType", 
                   "ifStatement", "loop", "whileLoop", "forGeneratorLoop", 
                   "forListLoop" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    T__61=62
    T__62=63
    STRING=64
    SYMBOL=65
    NUMBER=66
    WS=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class JsonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(langParser.ValueContext,0)


        def getRuleIndex(self):
            return langParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson" ):
                return visitor.visitJson(self)
            else:
                return visitor.visitChildren(self)




    def json(self):

        localctx = langParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.PairContext)
            else:
                return self.getTypedRuleContext(langParser.PairContext,i)


        def getRuleIndex(self):
            return langParser.RULE_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj" ):
                listener.enterObj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj" ):
                listener.exitObj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObj" ):
                return visitor.visitObj(self)
            else:
                return visitor.visitChildren(self)




    def obj(self):

        localctx = langParser.ObjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_obj)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(langParser.T__0)
                self.state = 67
                self.pair()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__1:
                    self.state = 68
                    self.match(langParser.T__1)
                    self.state = 69
                    self.pair()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(langParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(langParser.T__0)
                self.state = 78
                self.match(langParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def value(self):
            return self.getTypedRuleContext(langParser.ValueContext,0)


        def getRuleIndex(self):
            return langParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = langParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(langParser.STRING)
            self.state = 82
            self.match(langParser.T__3)
            self.state = 83
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ValueContext)
            else:
                return self.getTypedRuleContext(langParser.ValueContext,i)


        def getRuleIndex(self):
            return langParser.RULE_arr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArr" ):
                listener.enterArr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArr" ):
                listener.exitArr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArr" ):
                return visitor.visitArr(self)
            else:
                return visitor.visitChildren(self)




    def arr(self):

        localctx = langParser.ArrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_arr)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.match(langParser.T__4)
                self.state = 86
                self.value()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==langParser.T__1:
                    self.state = 87
                    self.match(langParser.T__1)
                    self.state = 88
                    self.value()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 94
                self.match(langParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 96
                self.match(langParser.T__4)
                self.state = 97
                self.match(langParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(langParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(langParser.NUMBER, 0)

        def obj(self):
            return self.getTypedRuleContext(langParser.ObjContext,0)


        def arr(self):
            return self.getTypedRuleContext(langParser.ArrContext,0)


        def function(self):
            return self.getTypedRuleContext(langParser.FunctionContext,0)


        def codeBlockAsFunction(self):
            return self.getTypedRuleContext(langParser.CodeBlockAsFunctionContext,0)


        def lockdownJsonExpression(self):
            return self.getTypedRuleContext(langParser.LockdownJsonExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = langParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(langParser.STRING)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 101
                self.match(langParser.NUMBER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 102
                self.obj()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.arr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.match(langParser.T__6)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.match(langParser.T__7)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.match(langParser.T__8)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 107
                self.function()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 108
                self.codeBlockAsFunction()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 109
                self.lockdownJsonExpression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dynamic = None # Token
            self.functionBreakTypes = None # ExpressionContext
            self.raw_argument = None # ExpressionContext

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def argumentDestructurings(self):
            return self.getTypedRuleContext(langParser.ArgumentDestructuringsContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(langParser.ExpressionContext,i)


        def getRuleIndex(self):
            return langParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = langParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==langParser.T__9:
                    self.state = 112
                    localctx.dynamic = self.match(langParser.T__9)


                self.state = 115
                self.match(langParser.T__10)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==langParser.SYMBOL:
                    self.state = 116
                    self.match(langParser.SYMBOL)


                self.state = 119
                self.match(langParser.T__11)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << langParser.T__0) | (1 << langParser.T__4) | (1 << langParser.T__6) | (1 << langParser.T__7) | (1 << langParser.T__9) | (1 << langParser.T__10) | (1 << langParser.T__11) | (1 << langParser.T__20) | (1 << langParser.T__39) | (1 << langParser.T__40) | (1 << langParser.T__41) | (1 << langParser.T__42) | (1 << langParser.T__43) | (1 << langParser.T__44) | (1 << langParser.T__45) | (1 << langParser.T__46) | (1 << langParser.T__47) | (1 << langParser.T__48) | (1 << langParser.T__49) | (1 << langParser.T__51) | (1 << langParser.T__52) | (1 << langParser.T__53) | (1 << langParser.T__54) | (1 << langParser.T__57) | (1 << langParser.T__58) | (1 << langParser.T__59))) != 0) or ((((_la - 64)) & ~0x3f) == 0 and ((1 << (_la - 64)) & ((1 << (langParser.STRING - 64)) | (1 << (langParser.SYMBOL - 64)) | (1 << (langParser.NUMBER - 64)))) != 0):
                    self.state = 120
                    self.argumentDestructurings()


                self.state = 123
                self.match(langParser.T__12)
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 124
                    localctx.functionBreakTypes = self.expression(0)


                self.state = 127
                self.match(langParser.T__0)
                self.state = 128
                self.codeBlock()
                self.state = 129
                self.match(langParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==langParser.T__9:
                    self.state = 131
                    localctx.dynamic = self.match(langParser.T__9)


                self.state = 134
                self.match(langParser.T__10)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==langParser.SYMBOL:
                    self.state = 135
                    self.match(langParser.SYMBOL)


                self.state = 138
                self.match(langParser.T__13)
                self.state = 139
                localctx.raw_argument = self.expression(0)
                self.state = 140
                self.match(langParser.T__14)
                self.state = 142
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 141
                    localctx.functionBreakTypes = self.expression(0)


                self.state = 144
                self.match(langParser.T__0)
                self.state = 145
                self.codeBlock()
                self.state = 146
                self.match(langParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CodeBlockAsFunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def codeBlock(self):
            return self.getTypedRuleContext(langParser.CodeBlockContext,0)


        def getRuleIndex(self):
            return langParser.RULE_codeBlockAsFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodeBlockAsFunction" ):
                listener.enterCodeBlockAsFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodeBlockAsFunction" ):
                listener.exitCodeBlockAsFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCodeBlockAsFunction" ):
                return visitor.visitCodeBlockAsFunction(self)
            else:
                return visitor.visitChildren(self)




    def codeBlockAsFunction(self):

        localctx = langParser.CodeBlockAsFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_codeBlockAsFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.codeBlock()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LockdownJsonExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_lockdownJsonExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLockdownJsonExpression" ):
                listener.enterLockdownJsonExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLockdownJsonExpression" ):
                listener.exitLockdownJsonExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLockdownJsonExpression" ):
                return visitor.visitLockdownJsonExpression(self)
            else:
                return visitor.visitChildren(self)




    def lockdownJsonExpression(self):

        localctx = langParser.LockdownJsonExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lockdownJsonExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(langParser.T__15)
            self.state = 153
            self.match(langParser.T__11)
            self.state = 154
            self.expression(0)
            self.state = 155
            self.match(langParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentDestructuringsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argumentDestructuring(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ArgumentDestructuringContext)
            else:
                return self.getTypedRuleContext(langParser.ArgumentDestructuringContext,i)


        def getRuleIndex(self):
            return langParser.RULE_argumentDestructurings

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentDestructurings" ):
                listener.enterArgumentDestructurings(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentDestructurings" ):
                listener.exitArgumentDestructurings(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentDestructurings" ):
                return visitor.visitArgumentDestructurings(self)
            else:
                return visitor.visitChildren(self)




    def argumentDestructurings(self):

        localctx = langParser.ArgumentDestructuringsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_argumentDestructurings)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.argumentDestructuring()
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==langParser.T__1:
                self.state = 158
                self.match(langParser.T__1)
                self.state = 159
                self.argumentDestructuring()
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentDestructuringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def getRuleIndex(self):
            return langParser.RULE_argumentDestructuring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentDestructuring" ):
                listener.enterArgumentDestructuring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentDestructuring" ):
                listener.exitArgumentDestructuring(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentDestructuring" ):
                return visitor.visitArgumentDestructuring(self)
            else:
                return visitor.visitChildren(self)




    def argumentDestructuring(self):

        localctx = langParser.ArgumentDestructuringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_argumentDestructuring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.expression(0)
            self.state = 166
            self.match(langParser.SYMBOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SymbolInitializationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(langParser.SYMBOL, 0)

        def expression(self):
            return self.getTypedRuleContext(langParser.ExpressionContext,0)


        def getRuleIndex(self):
            return langParser.RULE_symbolInitialization

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSymbolInitialization" ):
                listener.enterSymbolInitialization(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSymbolInitialization" ):
                listener.exitSymbolInitialization(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSymbolInitialization" ):
                return visitor.visitSymbolInitialization(self)
            else:
                return visitor.visitChildren(self)




    def symbolInitialization(self):
